// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeLeft desktop className 1`] = `
<span
  className="YpcTimeLeft Test"
>
  Осталось
   
  <time>
    
  </time>
</span>
`;

exports[`TimeLeft desktop timeStamp & timeUnits default unit 1`] = `
<span
  className="YpcTimeLeft"
>
  Осталось
   
  <time>
    
  </time>
</span>
`;

exports[`TimeLeft desktop timeStamp & timeUnits minutes unit 1`] = `
<span
  className="YpcTimeLeft"
>
  Осталось
   
  <time>
    
  </time>
</span>
`;

exports[`TimeLeft desktop timeStamp & timeUnits zero seconds 1`] = `
<span
  className="YpcTimeLeft"
>
  Осталось
   
  <time>
    
  </time>
</span>
`;

exports[`TimeLeft touch-phone className 1`] = `
<span
  className="YpcTimeLeft Test"
>
  Осталось
   
  <time>
    
  </time>
</span>
`;

exports[`TimeLeft touch-phone timeStamp & timeUnits default unit 1`] = `
<span
  className="YpcTimeLeft"
>
  Осталось
   
  <time>
    
  </time>
</span>
`;

exports[`TimeLeft touch-phone timeStamp & timeUnits minutes unit 1`] = `
<span
  className="YpcTimeLeft"
>
  Осталось
   
  <time>
    
  </time>
</span>
`;

exports[`TimeLeft touch-phone timeStamp & timeUnits zero seconds 1`] = `
<span
  className="YpcTimeLeft"
>
  Осталось
   
  <time>
    
  </time>
</span>
`;
